= 3.2.8.4 = ~ Fix scrollbar on another Theme

--- a/assets/src/css/frontend/learnpress.css
+++ b/assets/src/css/frontend/learnpress.css
@@ -1816,6 +1816,14 @@ body.confirm #popup_container {
     opacity: 1;
     transform: scale(1); }
 
+body.course-item-popup #learn-press-course-curriculum, body.course-item-popup #learn-press-content-item {
+  overflow-y: scroll;
+}
+
+body.course-item-popup #course-curriculum-popup #popup-sidebar #learn-press-course-curriculum {
+  height: 100%;
+}
+
 input[type="text"],
 input[type="email"],
 input[type="number"],
